Remove dependence on Java 1.5.